--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
 	</head>
 	<body>
 		<script src="js/game.js"></script>
+    <input type="button" onclick="startGame()" value="Start Game">
 	</body>
 </html>
