Added joystick image

--- a/index.html
+++ b/index.html
@@ -2,10 +2,24 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
-		<title>Simple Canvas Game</title>
+		<title>Allergy Hero</title>
+        <!--<link rel="stylesheet" href="bootstrap.css"/>-->
+        <!--<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">-->
 	</head>
 	<body>
-		<script src="js/game.js"></script>
-    <input type="button" onclick="startGame()" value="Start Game">
+    <script src="js/game.js"></script>
+       <!-- <div class="container">
+            <div class="row menu-bar">
+                <div class="pull-left">
+                    <script src="js/game.js"></script>
+                </div>
+                <div class="pull-right">
+                    <input type="button" onclick="startGame()" value="Start Game">
+                    <div class="lifeMeter"></div>
+                    <div class="score"></div>
+                    <div class="joystick"></div>
+                </div>
+            </div>
+        </div>-->
 	</body>
 </html>
