modifying controls for touch

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
 		<title>Allergy Hero</title>
         <!--<link rel="stylesheet" href="bootstrap.css"/>-->
         <!--<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">-->
+        <script src="http://threejs.org/build/three.min.js"></script>
+      <script src="http://jeromeetienne.github.io/threex.keyboardstate/threex.keyboardstate.js"></script>
+        <script src='js/virtualjoystick.js'></script>
 	</head>
 	<body>
     <script src="js/game.js"></script>
