Polished touch version with auto canvas resizing

--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 	</head>
 	<body>
     <script src="js/game.js"></script>
+    <input type="button" onclick="startGame()" value="Start Game">
 	</body>
 </html>
